--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -18,8 +18,8 @@ script_export_mode=2
 
 [preset.0.options]
 
-custom_template/debug=""
-custom_template/release=""
+custom_template/debug="/usr/local/share/godot/templates/windows_debug_x86_64.exe"
+custom_template/release="/usr/local/share/godot/templates/windows_release_x86_64.exe"
 debug/export_console_wrapper=1
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
